[gd_scene load_steps=20 format=2]

[ext_resource path="res://Misc/Overlap/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/LevelAssets/Sprites/DreadBarrel.gd" type="Script" id=2]
[ext_resource path="res://Levels/Level1/Sprites/Rubbles/wood/Break.mp3" type="AudioStream" id=3]
[ext_resource path="res://Levels/Level1/Sprites/Rubbles/wood/Break3.mp3" type="AudioStream" id=4]
[ext_resource path="res://Levels/Level1/Sprites/Rubbles/wood/Break2.mp3" type="AudioStream" id=5]
[ext_resource path="res://Levels/LevelAssets/Sprites/DreadBarrel9.png" type="Texture" id=6]
[ext_resource path="res://Sounds/Begin/WoodContact.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Begin/WoodContact2.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/Begin/WoodContact3.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/Begin/WoodContact5.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/Begin/WoodImpact4.wav" type="AudioStream" id=11]
[ext_resource path="res://Misc/Coins/GoldDrop.tscn" type="PackedScene" id=12]

[sub_resource type="PhysicsMaterial" id=11]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 223.886, 325.225 )

[sub_resource type="Animation" id=8]
resource_name = "broke"
tracks/0/type = "value"
tracks/0/path = NodePath(".:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtBox/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtBox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox:monitorable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HurtBox:hurteffect_show")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_explode"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LightOccluder2D:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4194312 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtBox/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtBox:hurteffect_show")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LightOccluder2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 42.9274, 61.7339 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 4.32748, 2.94073 )

[sub_resource type="OccluderPolygon2D" id=16]
closed = false
polygon = PoolVector2Array( -7.80021, -12.7105, 7.77616, -12.6609, 8.32183, -10.5775, 8.47065, 10.0091, 7.13128, 12.4895, -7.50257, 12.4399, -8.5443, 11.0509, -8.59391, -11.4208 )

[node name="DreadBarrel" type="RigidBody2D"]
collision_layer = 4194312
collision_mask = 15
mass = 2.15306
physics_material_override = SubResource( 11 )
gravity_scale = 3.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.52549, 0.52549, 0.52549, 1 )
position = Vector2( -0.0273256, -0.0283475 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.0197563, 0.0180216 )
scale = Vector2( 0.0400654, 0.0400654 )
shape = SubResource( 13 )
one_way_collision_margin = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
reset_on_save = false
anims/broke = SubResource( 8 )
anims/idle = SubResource( 9 )

[node name="HurtBox" parent="." instance=ExtResource( 1 )]
position = Vector2( -0.707123, 15.2028 )
collision_layer = 512
collision_mask = 320
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
visible = false
position = Vector2( 0.60751, -15.2558 )
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="Break1" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -2.45712, 29.2028 )
stream = ExtResource( 3 )
max_distance = 500.0
attenuation = 2.46229
bus = "SFX"

[node name="Break2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -2.45712, 29.2028 )
stream = ExtResource( 5 )
max_distance = 500.0
attenuation = 2.46229
bus = "SFX"

[node name="Break3" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -2.45712, 29.2028 )
stream = ExtResource( 4 )
max_distance = 500.0
attenuation = 2.46229
bus = "SFX"

[node name="Contact" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
max_distance = 500.0
attenuation = 2.46229
bus = "SFX"

[node name="Contact2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0
max_distance = 500.0
attenuation = 2.46229
bus = "SFX"

[node name="Contact3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
max_distance = 500.0
attenuation = 2.46229
bus = "SFX"

[node name="Contact4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0
max_distance = 500.0
attenuation = 2.46229
bus = "SFX"

[node name="Contact5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
max_distance = 500.0
attenuation = 2.46229
bus = "SFX"

[node name="ContactArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactArea"]
position = Vector2( -4.8146, -10.0947 )
shape = SubResource( 15 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ContactArea"]
position = Vector2( 4.85136, -10.1016 )
shape = SubResource( 15 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ContactArea"]
position = Vector2( -4.85579, 9.985 )
shape = SubResource( 15 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ContactArea"]
position = Vector2( 4.82636, 10.0124 )
shape = SubResource( 15 )

[node name="GoldDrop" parent="." instance=ExtResource( 12 )]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
show_behind_parent = true
occluder = SubResource( 16 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="ContactArea" to="." method="_on_ContactArea_body_entered"]
